--- a/app-starter-influx/src/main/resources/application-influx.yml
+++ b/app-starter-influx/src/main/resources/application-influx.yml
@@ -1,6 +1,6 @@
 spring:
   influx:
     url: http://localhost:8888
-    database:
-    user:
-    password:
+    database: yourdatabasename
+    user: yourusername
+    password: yourpassword
