--- a/app-starter-redis/src/main/resources/application-redis.yml
+++ b/app-starter-redis/src/main/resources/application-redis.yml
@@ -3,7 +3,7 @@ spring:
     database: 0      # Redis数据库索引（默认为0）
     host: localhost   # Redis服务器地址
     port: 8888       # Redis服务器连接端口
-    password:         # Redis服务器连接密码（默认为空）
+    password: yourpassword   # Redis服务器连接密码（默认为空）
     timeout: 100000  # 连接超时时间（毫秒）
     jedis:
       pool:
