--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
                 <artifactId>java-jwt</artifactId>
                 <version>3.8.1</version>
             </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.10.8</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
     <dependencies>
