--- a/app-common/pom.xml
+++ b/app-common/pom.xml
@@ -47,5 +47,10 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.14</version>
+      </dependency>
     </dependencies>
 </project>
