新增module搜索引擎elasticsearch

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
                 <artifactId>java-jwt</artifactId>
                 <version>3.8.1</version>
             </dependency>
+          <!-- es -->
+            <dependency>
+              <groupId>org.springframework.data</groupId>
+              <artifactId>spring-data-elasticsearch</artifactId>
+              <version>3.1.9.RELEASE</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -154,5 +160,6 @@
         <module>app-starter-swagger</module>
         <module>app-starter-logback</module>
         <module>app-starter-influx</module>
+        <module>app-starter-elasticsearch</module>
     </modules>
 </project>
