--- a/app-webapp/pom.xml
+++ b/app-webapp/pom.xml
@@ -45,6 +45,10 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-elasticsearch</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>app-webapp-1.0-SNAPSHOT</finalName>
