--- a/app-service/pom.xml
+++ b/app-service/pom.xml
@@ -35,6 +35,10 @@
             <groupId>com.cosmoplat</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-elasticsearch</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
